--- a/KhachHang/web/css/style.css
+++ b/KhachHang/web/css/style.css
@@ -1248,7 +1248,11 @@ h2.resp-accordion:first-child {
   margin-left: 0.2em;
 }
 .register-top-grid input[type="text"],
-.register-bottom-grid input[type="text"] {
+.register-bottom-grid input[type="text"],
+.register-top-grid input[type="email"],
+.register-bottom-grid input[type="email"],
+.register-top-grid input[type="password"],
+.register-bottom-grid input[type="password"] {
   border: 1px solid #eee;
   outline-color: #e45d5d;
   width: 96%;
